--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,18 @@
     />
   </head>
   <body>
-    <header><h1>Todo List</h1></header>
+    <header>
+      <h1><i class="fa-regular fa-note-sticky"></i>&nbsp;Todo List</h1>
+    </header>
 
     <div id="sidenav">
       <nav id="page-nav">
         <h2><i class="fa-solid fa-house"></i>&nbsp;&nbsp;Home</h2>
-        <div class="page-element rotate-left">
+        <div class="page-element rotate-left active">
           <i class="fa-solid fa-list-check"></i>
           <button class="nav-button" id="all-button">All</button>
         </div>
-        <div class="page-element rotate-right active">
+        <div class="page-element rotate-right">
           <i class="fa-solid fa-calendar-day"></i>
           <button class="nav-button" id="today-tasks-button">Today</button>
         </div>
@@ -36,17 +38,24 @@
       </nav>
       <div id="projects">
         <h2><i class="fa-solid fa-clipboard-list"></i>&nbsp;&nbsp;Projects</h2>
-        <div class="page-element active">
+        <div class="page-element">
           <i class="fa-solid fa-list"></i>
           <button id="Homework-button">Homework</button>
         </div>
-        <div class="page-element rotate-left">
-          <i class="fa-solid fa-plus"></i>
-          <button id="new-project-button">New Project</button>
+        <div class="page-element" id="new-project-div">
+          <div class="rotate-right">
+            <i class="fa-solid fa-plus"></i>
+            <button id="new-project-button">New Project</button>
+          </div>
+          <form action="javascript:alert('Holy hell!');">
+            <input type="text" />
+          </form>
         </div>
       </div>
     </div>
-    <main>Hello World</main>
+    <main>
+      <div id="project-overview"></div>
+    </main>
 
     <footer>
       <h3>
