--- a/src/index.html
+++ b/src/index.html
@@ -36,11 +36,13 @@
           </button>
         </div>
       </nav>
-      <div id="projects">
+      <div id="projects-overview">
         <h2><i class="fa-solid fa-clipboard-list"></i>&nbsp;&nbsp;Projects</h2>
-        <div class="page-element">
-          <i class="fa-solid fa-list"></i>
-          <button id="Homework-button">Homework</button>
+        <div id="project-elements">
+          <div class="page-element">
+            <i class="fa-solid fa-list"></i>
+            <button id="Homework-button">Homework</button>
+          </div>
         </div>
         <div class="page-element" id="new-project-div">
           <div class="rotate-right">
@@ -54,7 +56,7 @@
       </div>
     </div>
     <main>
-      <div id="project-overview"></div>
+      <div id="projects"></div>
     </main>
 
     <footer>
